stack/corepersistence/queryindex/src/main/java/org/apache/usergrid/persistence/query/tree/QueryFilterParser.java
// $ANTLR 3.5.1 org/apache/usergrid/persistence/query/tree/QueryFilter.g 2014-02-21 08:18:25

package org.apache.usergrid.persistence.query.tree;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.apache.usergrid.persistence.query.Query;
import org.apache.usergrid.persistence.query.Query.SortPredicate;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class QueryFilterParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASC", "BOOLEAN", "CONTAINS", 
		"DESC", "EQ", "ESC_SEQ", "EXPONENT", "FALSE", "FLOAT", "GT", "GTE", "HEX_DIGIT", 
		"ID", "LONG", "LT", "LTE", "NOT", "OCTAL_ESC", "OF", "OR", "STRING", "TRUE", 
		"UNICODE_ESC", "UUID", "WITHIN", "WS", "'('", "')'", "'*'", "','", "':'", 
		"'order by'", "'select'", "'where'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int AND=4;
	public static final int ASC=5;
	public static final int BOOLEAN=6;
	public static final int CONTAINS=7;
	public static final int DESC=8;
	public static final int EQ=9;
	public static final int ESC_SEQ=10;
	public static final int EXPONENT=11;
	public static final int FALSE=12;
	public static final int FLOAT=13;
	public static final int GT=14;
	public static final int GTE=15;
	public static final int HEX_DIGIT=16;
	public static final int ID=17;
	public static final int LONG=18;
	public static final int LT=19;
	public static final int LTE=20;
	public static final int NOT=21;
	public static final int OCTAL_ESC=22;
	public static final int OF=23;
	public static final int OR=24;
	public static final int STRING=25;
	public static final int TRUE=26;
	public static final int UNICODE_ESC=27;
	public static final int UUID=28;
	public static final int WITHIN=29;
	public static final int WS=30;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QueryFilterParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QueryFilterParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return QueryFilterParser.tokenNames; }
	@Override public String getGrammarFileName() { return "org/apache/usergrid/persistence/query/tree/QueryFilter.g"; }


		Query query = new Query();

	  private static final Logger logger = LoggerFactory
	      .getLogger(QueryFilterLexer.class);

		@Override
		public void emitErrorMessage(String msg) {
			logger.info(msg);
		}


	public static class property_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "property"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:175:1: property : ID ;
	public final QueryFilterParser.property_return property() throws RecognitionException {
		QueryFilterParser.property_return retval = new QueryFilterParser.property_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID1=null;

		Object ID1_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:175:10: ( ID )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:175:12: ID
			{
			root_0 = (Object)adaptor.nil();


			ID1=(Token)match(input,ID,FOLLOW_ID_in_property991); 
			ID1_tree = new Property(ID1) ;
			adaptor.addChild(root_0, ID1_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "property"


	public static class containsproperty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "containsproperty"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:177:1: containsproperty : ID ;
	public final QueryFilterParser.containsproperty_return containsproperty() throws RecognitionException {
		QueryFilterParser.containsproperty_return retval = new QueryFilterParser.containsproperty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID2=null;

		Object ID2_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:177:18: ( ID )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:177:20: ID
			{
			root_0 = (Object)adaptor.nil();


			ID2=(Token)match(input,ID,FOLLOW_ID_in_containsproperty1002); 
			ID2_tree = new ContainsProperty(ID2) ;
			adaptor.addChild(root_0, ID2_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "containsproperty"


	public static class withinproperty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "withinproperty"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:179:1: withinproperty : ID ;
	public final QueryFilterParser.withinproperty_return withinproperty() throws RecognitionException {
		QueryFilterParser.withinproperty_return retval = new QueryFilterParser.withinproperty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID3=null;

		Object ID3_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:179:16: ( ID )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:179:18: ID
			{
			root_0 = (Object)adaptor.nil();


			ID3=(Token)match(input,ID,FOLLOW_ID_in_withinproperty1013); 
			ID3_tree = new WithinProperty(ID3) ;
			adaptor.addChild(root_0, ID3_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "withinproperty"


	public static class booleanliteral_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "booleanliteral"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:181:1: booleanliteral : BOOLEAN ;
	public final QueryFilterParser.booleanliteral_return booleanliteral() throws RecognitionException {
		QueryFilterParser.booleanliteral_return retval = new QueryFilterParser.booleanliteral_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BOOLEAN4=null;

		Object BOOLEAN4_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:181:15: ( BOOLEAN )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:181:17: BOOLEAN
			{
			root_0 = (Object)adaptor.nil();


			BOOLEAN4=(Token)match(input,BOOLEAN,FOLLOW_BOOLEAN_in_booleanliteral1024); 
			BOOLEAN4_tree = new BooleanLiteral(BOOLEAN4) ;
			adaptor.addChild(root_0, BOOLEAN4_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "booleanliteral"


	public static class longliteral_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "longliteral"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:184:1: longliteral : LONG ;
	public final QueryFilterParser.longliteral_return longliteral() throws RecognitionException {
		QueryFilterParser.longliteral_return retval = new QueryFilterParser.longliteral_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LONG5=null;

		Object LONG5_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:184:13: ( LONG )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:185:3: LONG
			{
			root_0 = (Object)adaptor.nil();


			LONG5=(Token)match(input,LONG,FOLLOW_LONG_in_longliteral1038); 
			LONG5_tree = new LongLiteral(LONG5) ;
			adaptor.addChild(root_0, LONG5_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "longliteral"


	public static class uuidliteral_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "uuidliteral"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:187:1: uuidliteral : UUID ;
	public final QueryFilterParser.uuidliteral_return uuidliteral() throws RecognitionException {
		QueryFilterParser.uuidliteral_return retval = new QueryFilterParser.uuidliteral_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token UUID6=null;

		Object UUID6_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:187:13: ( UUID )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:188:3: UUID
			{
			root_0 = (Object)adaptor.nil();


			UUID6=(Token)match(input,UUID,FOLLOW_UUID_in_uuidliteral1052); 
			UUID6_tree = new UUIDLiteral(UUID6) ;
			adaptor.addChild(root_0, UUID6_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "uuidliteral"


	public static class stringliteral_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "stringliteral"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:190:1: stringliteral : STRING ;
	public final QueryFilterParser.stringliteral_return stringliteral() throws RecognitionException {
		QueryFilterParser.stringliteral_return retval = new QueryFilterParser.stringliteral_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token STRING7=null;

		Object STRING7_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:190:15: ( STRING )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:191:3: STRING
			{
			root_0 = (Object)adaptor.nil();


			STRING7=(Token)match(input,STRING,FOLLOW_STRING_in_stringliteral1065); 
			STRING7_tree = new StringLiteral(STRING7) ;
			adaptor.addChild(root_0, STRING7_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "stringliteral"


	public static class floatliteral_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "floatliteral"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:193:1: floatliteral : FLOAT ;
	public final QueryFilterParser.floatliteral_return floatliteral() throws RecognitionException {
		QueryFilterParser.floatliteral_return retval = new QueryFilterParser.floatliteral_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token FLOAT8=null;

		Object FLOAT8_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:193:14: ( FLOAT )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:194:3: FLOAT
			{
			root_0 = (Object)adaptor.nil();


			FLOAT8=(Token)match(input,FLOAT,FOLLOW_FLOAT_in_floatliteral1080); 
			FLOAT8_tree = new FloatLiteral(FLOAT8) ;
			adaptor.addChild(root_0, FLOAT8_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "floatliteral"


	public static class value_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:197:1: value : ( booleanliteral | longliteral | uuidliteral | stringliteral | floatliteral );
	public final QueryFilterParser.value_return value() throws RecognitionException {
		QueryFilterParser.value_return retval = new QueryFilterParser.value_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope booleanliteral9 =null;
		ParserRuleReturnScope longliteral10 =null;
		ParserRuleReturnScope uuidliteral11 =null;
		ParserRuleReturnScope stringliteral12 =null;
		ParserRuleReturnScope floatliteral13 =null;


		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:197:7: ( booleanliteral | longliteral | uuidliteral | stringliteral | floatliteral )
			int alt1=5;
			switch ( input.LA(1) ) {
			case BOOLEAN:
				{
				alt1=1;
				}
				break;
			case LONG:
				{
				alt1=2;
				}
				break;
			case UUID:
				{
				alt1=3;
				}
				break;
			case STRING:
				{
				alt1=4;
				}
				break;
			case FLOAT:
				{
				alt1=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:198:3: booleanliteral
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_booleanliteral_in_value1096);
					booleanliteral9=booleanliteral();
					state._fsp--;

					adaptor.addChild(root_0, booleanliteral9.getTree());

					}
					break;
				case 2 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:199:5: longliteral
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_longliteral_in_value1102);
					longliteral10=longliteral();
					state._fsp--;

					adaptor.addChild(root_0, longliteral10.getTree());

					}
					break;
				case 3 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:200:5: uuidliteral
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_uuidliteral_in_value1108);
					uuidliteral11=uuidliteral();
					state._fsp--;

					adaptor.addChild(root_0, uuidliteral11.getTree());

					}
					break;
				case 4 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:201:5: stringliteral
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_stringliteral_in_value1114);
					stringliteral12=stringliteral();
					state._fsp--;

					adaptor.addChild(root_0, stringliteral12.getTree());

					}
					break;
				case 5 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:202:5: floatliteral
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_floatliteral_in_value1120);
					floatliteral13=floatliteral();
					state._fsp--;

					adaptor.addChild(root_0, floatliteral13.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value"


	public static class equalityop_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "equalityop"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:213:1: equalityop : ( property LT ^ value | property LTE ^ value | property EQ ^ value | property GT ^ value | property GTE ^ value );
	public final QueryFilterParser.equalityop_return equalityop() throws RecognitionException {
		QueryFilterParser.equalityop_return retval = new QueryFilterParser.equalityop_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LT15=null;
		Token LTE18=null;
		Token EQ21=null;
		Token GT24=null;
		Token GTE27=null;
		ParserRuleReturnScope property14 =null;
		ParserRuleReturnScope value16 =null;
		ParserRuleReturnScope property17 =null;
		ParserRuleReturnScope value19 =null;
		ParserRuleReturnScope property20 =null;
		ParserRuleReturnScope value22 =null;
		ParserRuleReturnScope property23 =null;
		ParserRuleReturnScope value25 =null;
		ParserRuleReturnScope property26 =null;
		ParserRuleReturnScope value28 =null;

		Object LT15_tree=null;
		Object LTE18_tree=null;
		Object EQ21_tree=null;
		Object GT24_tree=null;
		Object GTE27_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:213:12: ( property LT ^ value | property LTE ^ value | property EQ ^ value | property GT ^ value | property GTE ^ value )
			int alt2=5;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==ID) ) {
				switch ( input.LA(2) ) {
				case LT:
					{
					alt2=1;
					}
					break;
				case LTE:
					{
					alt2=2;
					}
					break;
				case EQ:
					{
					alt2=3;
					}
					break;
				case GT:
					{
					alt2=4;
					}
					break;
				case GTE:
					{
					alt2=5;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:214:3: property LT ^ value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_property_in_equalityop1145);
					property14=property();
					state._fsp--;

					adaptor.addChild(root_0, property14.getTree());

					LT15=(Token)match(input,LT,FOLLOW_LT_in_equalityop1147); 
					LT15_tree = new LessThan(LT15) ;
					root_0 = (Object)adaptor.becomeRoot(LT15_tree, root_0);

					pushFollow(FOLLOW_value_in_equalityop1153);
					value16=value();
					state._fsp--;

					adaptor.addChild(root_0, value16.getTree());

					}
					break;
				case 2 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:215:4: property LTE ^ value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_property_in_equalityop1158);
					property17=property();
					state._fsp--;

					adaptor.addChild(root_0, property17.getTree());

					LTE18=(Token)match(input,LTE,FOLLOW_LTE_in_equalityop1160); 
					LTE18_tree = new LessThanEqual(LTE18) ;
					root_0 = (Object)adaptor.becomeRoot(LTE18_tree, root_0);

					pushFollow(FOLLOW_value_in_equalityop1166);
					value19=value();
					state._fsp--;

					adaptor.addChild(root_0, value19.getTree());

					}
					break;
				case 3 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:216:4: property EQ ^ value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_property_in_equalityop1171);
					property20=property();
					state._fsp--;

					adaptor.addChild(root_0, property20.getTree());

					EQ21=(Token)match(input,EQ,FOLLOW_EQ_in_equalityop1173); 
					EQ21_tree = new Equal(EQ21) ;
					root_0 = (Object)adaptor.becomeRoot(EQ21_tree, root_0);

					pushFollow(FOLLOW_value_in_equalityop1179);
					value22=value();
					state._fsp--;

					adaptor.addChild(root_0, value22.getTree());

					}
					break;
				case 4 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:217:4: property GT ^ value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_property_in_equalityop1184);
					property23=property();
					state._fsp--;

					adaptor.addChild(root_0, property23.getTree());

					GT24=(Token)match(input,GT,FOLLOW_GT_in_equalityop1186); 
					GT24_tree = new GreaterThan(GT24) ;
					root_0 = (Object)adaptor.becomeRoot(GT24_tree, root_0);

					pushFollow(FOLLOW_value_in_equalityop1192);
					value25=value();
					state._fsp--;

					adaptor.addChild(root_0, value25.getTree());

					}
					break;
				case 5 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:218:4: property GTE ^ value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_property_in_equalityop1197);
					property26=property();
					state._fsp--;

					adaptor.addChild(root_0, property26.getTree());

					GTE27=(Token)match(input,GTE,FOLLOW_GTE_in_equalityop1199); 
					GTE27_tree = new GreaterThanEqual(GTE27) ;
					root_0 = (Object)adaptor.becomeRoot(GTE27_tree, root_0);

					pushFollow(FOLLOW_value_in_equalityop1205);
					value28=value();
					state._fsp--;

					adaptor.addChild(root_0, value28.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		 
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "equalityop"


	public static class locationop_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "locationop"
	// org/apache/usergrid/persistence/query/tree/QueryFilter.g:222:1: locationop : withinproperty WITHIN ^ ( floatliteral | longliteral ) OF ! ( floatliteral | longliteral ) ',' ! ( floatliteral | longliteral ) ;
	public final QueryFilterParser.locationop_return locationop() throws RecognitionException {
		QueryFilterParser.locationop_return retval = new QueryFilterParser.locationop_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WITHIN30=null;
		Token OF33=null;
		Token char_literal36=null;
		ParserRuleReturnScope withinproperty29 =null;
		ParserRuleReturnScope floatliteral31 =null;
		ParserRuleReturnScope longliteral32 =null;
		ParserRuleReturnScope floatliteral34 =null;
		ParserRuleReturnScope longliteral35 =null;
		ParserRuleReturnScope floatliteral37 =null;
		ParserRuleReturnScope longliteral38 =null;

		Object WITHIN30_tree=null;
		Object OF33_tree=null;
		Object char_literal36_tree=null;

		try {
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:222:12: ( withinproperty WITHIN ^ ( floatliteral | longliteral ) OF ! ( floatliteral | longliteral ) ',' ! ( floatliteral | longliteral ) )
			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:223:3: withinproperty WITHIN ^ ( floatliteral | longliteral ) OF ! ( floatliteral | longliteral ) ',' ! ( floatliteral | longliteral )
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_withinproperty_in_locationop1220);
			withinproperty29=withinproperty();
			state._fsp--;

			adaptor.addChild(root_0, withinproperty29.getTree());

			WITHIN30=(Token)match(input,WITHIN,FOLLOW_WITHIN_in_locationop1222); 
			WITHIN30_tree = new WithinOperand(WITHIN30) ;
			root_0 = (Object)adaptor.becomeRoot(WITHIN30_tree, root_0);

			// org/apache/usergrid/persistence/query/tree/QueryFilter.g:223:41: ( floatliteral | longliteral )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==FLOAT) ) {
				alt3=1;
			}
			else if ( (LA3_0==LONG) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:223:42: floatliteral
					{
					pushFollow(FOLLOW_floatliteral_in_locationop1229);
					floatliteral31=floatliteral();
					state._fsp--;

					adaptor.addChild(root_0, floatliteral31.getTree());

					}
					break;
				case 2 :
					// org/apache/usergrid/persistence/query/tree/QueryFilter.g:223:55: longliteral
					{
					pushFollow(FOLLOW_longliteral_in_locationop1231);
					longliteral32=longliteral();
					state._fsp--;

					adaptor.addChild(root_0, longliteral32.getTree());

					}
					break;

			}
